# gps-genealogy-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  add_familysearch_records.py  pyproject.toml
.github/workflows/: ci.yml  wiki-apply.yml  wiki-preflight.yml
docs/: BROWSER_LOGIN_SUMMARY.md  Idempotency.md  deployment.md  familysearch_browser_authentication.md  troubleshooting.md
docs/architecture/: ancestry-engine.md  genealogy-crawler-v2.md  genealogy-crawler.md  high-autonomy-architecture.md  publishing-manager.md
docs/plans/: 2026-01-17-gps-agents-design.md  2026-01-17-semantic-kernel-autogen-port-design.md  2026-01-20-genealogy-sources-expansion.md  2026-01-20-photo-downloader-design.md
examples/: familysearch_browser_login.py  v2_integration_example.py
prompts/: citation_agent.txt  data_quality_agent.txt  ethnicity_dna_agent.txt  gps_reasoning_critic.txt  gps_standards_critic.txt  research_agent.txt  search_orchestrator.txt  synthesis_agent.txt  system_root.txt  translation_agent.txt  workflow_agent.txt
research/: Archer_L_Durham_Profile.md  CHANGELOG_Archer_Durham.md
research/archer-l-durham/: README.md  archer-l-durham.ged  family_tree_expanded.json  profile.json  sources_compilation.md  wiki_presence_summary.md  wikidata-quickstatements.txt  wikipedia-draft.md
research/archer-l-durham/articles/: archer_durham_family_history.md  archer_durham_featured_article.md  archer_durham_wikipedia_draft.md  archer_durham_wikitree_profile.md
research/archer-l-durham/wikidata/: README.md  archer_durham_additions.txt  archer_durham_quickstatements.txt  archer_durham_wikidata.json  quickstatements_batch_fixes.txt  wikidata_verification_checklist.md
research/notes/: archer-l-durham.md
research/trees/: DEEP_GENERATIONS_G6_G8.md  G12_MEDIEVAL_FOUNDATION.md  MASTER-INDEX.md  MASTER_CITATION_LIBRARY.md  MASTER_PEDIGREE_REFINED.md  MASTER_PEDIGREE_TO_CRUSADERS.md  MATERNAL_LINEAGE_GPS_REPORT.md  ancestral-accountability-section.md  ancestry-origins.md  byu-special-collections-request-letter.md  comprehensive-sources-bibliography.md  family-bio-sketches-narrative.md  family-landmarks-map.md  geographic-coordinates.md  janvrin-slavery-connections.md  memorial-index-enslaved-people.md  research-action-plan.md  tregeagle-maeser-building-legacy.md
research/trees/archer-l-durham/: census_tree.json  tree.json
research/trees/brown-thomas/: 1870_CENSUS_RECORD.md  PRIMARY_SOURCES.md  README.md  brown_tree.json  family_narrative.md  holy_cross_cemetery_request.md  nevada_county_naturalization_request.md
research/trees/john-jeffery/: ANCESTRY_EXPANSION_PLAN.md  CONTINUOUS_EXPANSION_STATUS.md  CURRENT_STATUS.md  DISAMBIGUATION-CHECKLIST.md  EXAMPLE_census_1851.yaml  EXPANSION_RESULTS.md  FAMILYSEARCH_SETUP.md  INDEX.md  INTEGRATION_SUMMARY.md  MANUAL_VALIDATION_CHECKLIST.md  PRIMARY_VALIDATION_STATUS.md  QUICKSTART.md  RATE_LIMITING.md  RATE_LIMITING_AUDIT.md  README.md  README_AUTOMATED_EXPANSION.md  README_PRIMARY_SOURCE_VALIDATION.md  README_VALIDATION.md  RESEARCH-STATUS-REPORT.md  SUMMARY.md  VALIDATION_COMPLETE.md  VALIDATION_COMPLETE_GUIDE.md  VALIDATION_STATUS.md  VALIDATION_WORKFLOW.md  VERIFICATION_CLI.md  VERIFICATION_SUMMARY.md  add_familysearch_validation.py  analyze_census.py  ancestry_tree.mmd  ancestry_validation_plan.json  ancestry_validation_results.json  auto_generate_wikitree_validations.py  auto_validate_batch.py  census_1841.yaml  census_1851.yaml  census_1861.yaml  census_extraction_guide.md  census_fetch_cache.json  census_primary_data.json  census_validation_progress.json  (+41 more)
research/trees/seed/: tree.json
research/trees/tregeagle/: README.md  family_narrative.md  multi_source_validator.py  tregeagle_tree.json  vincent-tregeagle-connection.md
research/trees/wikipedia-articles/: CHEROKEE_GPS_EVIDENCE_REPORT.md  CHEROKEE_LINEAGE_SUMMARY.md  CHEROKEE_QUICK_REFERENCE.md  CHEROKEE_RESEARCH_GUIDE.md  CRUSADER_SERVICE_SUMMARY.md  Charles_John_Vincent.wiki  ENHANCED_CITATIONS.txt  FREDERICK_JANVRIN_ENHANCEMENT_SUMMARY.md  FREDERICK_JANVRIN_TALK_PAGE_DEFENSE.md  Franklin_Swimmer_McLemore.wiki  Frederick_Janvrin.wiki  Frederick_Janvrin_Vincent.wiki  George_Washington_Scraper.wiki  HUGUENOT_RESEARCH_GUIDE.md  HUGUENOT_WIKIPEDIA_CITATIONS.wiki  INTERNAL_LINKING_STRATEGY.md  James_Eli_Tregeagle.wiki  Janvrin_Etymology_Section.wiki  Maeser_Building_Craftsman_Section.wiki  README.md  Robert_McLemore.wiki  SOURCE_VERIFICATION_CHECKLIST.md  START_HERE.md  TALK_PAGE_DEFENSES.md  Tregeagle_Craft_Lineage_Section.wiki  Tregeagle_Lineage_Chart.md  UPDATE_INSTRUCTIONS_Etymology.md  UPDATE_INSTRUCTIONS_Tregeagle.md  VIKING_PROGENITORS_DOCUMENTATION.md  WIKIPEDIA_PUBLICATION_GUIDE.md
research/wiki_plans/archer-l-durham/: SUMMARY.md  approved.yaml  facts.json  plan.json  review.json  wikidata_payload.json  wikipedia_draft.md  wikitree_bio.md  wikitree_profile.yaml
schemas/: planner_input.schema.json  planner_output.schema.json  wiki_facts.schema.json  wiki_review.schema.json  wikidata_payload.schema.json
scripts/: check_idempotency_doc.py  export_durham_tree.py  research_sorrell_family.py  test_archer_durham.py
src/gps_agents/: __init__.py  cli.py  fs.py  git_utils.py  graph.py  logging.py  net.py
src/gps_agents/agents/: __init__.py  base.py  citation.py  data_quality.py  dna.py  gps_reasoning_critic.py  gps_standards_critic.py  pipeline.py  research.py  schemas.py  search_orchestrator.py  synthesis.py  translation.py  workflow.py
tests/: __init__.py  test_agentic_pipeline.py  test_cli_wiki.py  test_extraction.py  test_familysearch_client.py  test_gedcom_export.py  test_genealogy_crawler_v2.py  test_graph_projection.py  test_idempotency.py  test_ledger.py  test_linkage.py  test_llm_evaluator.py  test_match_merge.py  test_models.py  test_new_sources.py  test_ocr.py  test_publishing_manager.py  test_research_orchestrator.py  test_search_improvements.py  test_search_orchestrator.py  test_sk_plugins.py  test_wiki_pipeline.py  test_wiki_publishing.py  test_wikitree_census.py
tests/integration/: test_research_pipeline.py
(+163 files in other folders)
