[project]
name = "gps-genealogy-agents"
version = "0.2.0"
description = "Multi-agent AI genealogical research system using Semantic Kernel and AutoGen, meeting GPS (Genealogical Proof Standard) with Gramps integration"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Thomas Vincent", email = "thomasvincent@gmail.com" }]
keywords = [
    "genealogy",
    "ai",
    "agents",
    "autogen",
    "semantic-kernel",
    "gps",
    "gramps",
    "multi-agent",
    "agentic-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Sociology :: Genealogy",
]

dependencies = [
    # Semantic Kernel + AutoGen multi-agent framework
    "semantic-kernel>=1.0.0",
    "pyautogen>=0.2.0",
    "autogen-ext[anthropic,openai]>=0.7.5",
    "tenacity>=8.2.0",
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    # Gramps integration
    "gramps>=5.2.0,<7.0.0",
    "orjson>=3.9.0",
    "lxml>=5.0.0",
    # Core utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    # CLI and formatting
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Templates and utilities
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    # UUID7 support (built-in Python 3.14+, polyfill for 3.13)
    "uuid-utils>=0.9.0",
    "werkzeug>=3.1.5",
]

[project.optional-dependencies]
# ChromaDB for semantic memory (requires Python <3.14 due to onnxruntime)
chromadb = [
    "chromadb>=1.0.0",
]

# RocksDB for immutable fact ledger
rocksdb = [
    "python-rocksdb>=0.7.0",
]

# Gramps GUI plugin dependencies (for desktop Gramps)
gramps-gui = [
    "PyGObject>=3.42.0",
    "pycairo>=1.20.0",
]

# Full Gramps integration with all features
gramps-full = [
    "PyGObject>=3.42.0",
    "pycairo>=1.20.0",
    "Pillow>=10.0.0",
    "PyICU>=2.10.0",
]

# Web API dependencies
web = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.20",
]

# Additional LLM providers
azure = [
    "azure-identity>=1.15.0",
]
ollama = [
    "ollama>=0.1.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.8.0",
]

# All optional dependencies (excludes chromadb which requires Python <3.14)
all = [
    "gps-genealogy-agents[rocksdb,gramps-full,web,dev]",
]

[project.scripts]
gps-agents = "gps_agents.cli:app"
genai = "gps_agents.cli:app"

[project.urls]
Homepage = "https://github.com/thomasvincent/gps-genealogy-agents"
Documentation = "https://github.com/thomasvincent/gps-genealogy-agents#readme"
Repository = "https://github.com/thomasvincent/gps-genealogy-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gps_agents"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["gps_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
